--- a/bob/index.html
+++ b/bob/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="http://localhost:8000/static/picker.css">
     <title>Bob</title>
   </head>
   <body bgcolor="#D3D3D3" style="margin: 0px">
